index fix error

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, eum
       voluptates corrupti dolorum excepturi assumenda iste ullam laborum quam
       suscipit quas, culpa exercitationem accusantium! Veniam maiores asperiores
-      magni debitis iure??
+      magni debitis iure?
     </p>
   </body>
 </html>
